--- a/index.html
+++ b/index.html
@@ -41,57 +41,37 @@
 
 <body id="1" class="home">
 <div class="wrapper">
-    
 
 <section>
     <div class="container">
         <div class="row">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <a class="" href="http://www.baumschule-hellwig.de/"><img src="http://www.baumschule-hellwig.de/site/templates/images/hellwig-logo.png" class="img-responsive visible-xs logo-xs" alt=""></a>
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#hauptnav" aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="privatverkauf hidden-xs"><h4>Kein Privatverkauf</h4><a href="http://www.baumschule-hellwig.de/site/assets/files/1/hellwig_bestellliste_privatkunden_pdf-2.pdf" download=""><p>Zur Kundeninformation (PDF-Download)</p></a></div>
-                    <div class="clearfix"></div>
-                    <div class="collapse navbar-collapse" id="hauptnav">
-                        <div class="logo-container">
-                            <a class="" href="http://www.baumschule-hellwig.de/"><img src="http://www.baumschule-hellwig.de/site/templates/images/hellwig-logo.png" class="img-responsive hidden-xs" alt=""></a>
-                        </div>
-                        <div class="container-nav">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a class="active" href="http://www.baumschule-hellwig.de/">Home</a></li><li><a class="" href="http://www.baumschule-hellwig.de/ueber-hellwig/">Über Hellwig</a></li>
-        <li class="dropdown">
-            <a href="http://www.baumschule-hellwig.de/sortiment/" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sortiment</a>
-            <ul class="dropdown-menu">
-                <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/rhododendron/">Rhododendron</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/laubgehoelze/">Laubgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/nadelgehoelze/">Nadelgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/staemme/">Stämme</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/formgehoelze/">Formgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/acer/">Acer</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/konzepte/">Konzepte</a></li>
-            </ul>
-        </li>
-        <li><a class="" href="http://www.baumschule-hellwig.de/service/">Service</a></li><li><a class="" href="http://www.baumschule-hellwig.de/news/">News</a></li><li><a class="" href="http://www.baumschule-hellwig.de/kontakt/">Kontakt</a></li>
-                                <form class="navbar-form navbar-right"  id="search-form" action="http://www.baumschule-hellwig.de/sortiment/suchergebnis/" method="get" >
-                                    <div class="form-group">
-                                        <input name="search" id="search" type="text" class="form-control" placeholder="Produktsuche...">
-                                        <div id="search-result"></div>
-                                    </div>
-                                    <button type="submit" id="search-button" class="fa fa-search" data-search=""></button>
-                                </form>
-                            </ul>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-            </nav>
-        </div>
-    </div>
+        <div class="container-nav navbar container-fluid navbar-default">
+        		<div class="main-logo">
+                <a href="http://www.ole-sperlich.de"></a>
+            </div>
+            <div class="container-nav">
+            <ul class="nav navbar-nav navbar-right">
+               <li><a class="active" href="http://www.ole-sperlich.de/">Home</a></li><li><a class="" href="http://www.baumschule-hellwig.de/ueber-hellwig/">Über Hellwig</a></li>
+        			<li class="dropdown">
+            		<a href="http://www.baumschule-hellwig.de/sortiment/" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sortiment</a>
+            			<ul class="dropdown-menu">
+                			<li><a class="" href="http://www.baumschule-hellwig.de/sortiment/rhododendron/">Rhododendron</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/laubgehoelze/">Laubgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/nadelgehoelze/">Nadelgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/staemme/">Stämme</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/formgehoelze/">Formgehölze</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/acer/">Acer</a></li><li><a class="" href="http://www.baumschule-hellwig.de/sortiment/konzepte/">Konzepte</a></li>
+            			</ul>
+        			</li>
+        			<li><a class="" href="http://www.baumschule-hellwig.de/service/">Service</a></li><li><a class="" href="http://www.baumschule-hellwig.de/news/">News</a></li><li><a class="" href="http://www.baumschule-hellwig.de/kontakt/">Kontakt</a></li>
+               <form class="navbar-form navbar-right"  id="search-form" action="http://www.baumschule-hellwig.de/sortiment/suchergebnis/" method="get" >
+               	<div class="form-group">
+                   	<input name="search" id="search" type="text" class="form-control" placeholder="Produktsuche...">
+                         	<div id="search-result"></div>
+               	</div>
+               	<button type="submit" id="search-button" class="fa fa-search" data-search=""></button>
+               </form>
+      		</ul>
+            <div class="clearfix"></div>
+       </div> <!-- container-nav -->
+       </div> <!-- row (einrückung falsch )-->
+    </div> <!-- row -->
+    </div> <!-- container -->
 </section>
 
     <section>
