--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Ole Sperlich" >
     <!-- CORE CSS -->
     <link href="Bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/site/templates/styles/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/site/templates/styles/jquery.fancybox.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="jquery.fancybox.min.css" rel="stylesheet" type="text/css">
 
     <link href="Hellwig.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/home/ole/Dokumente/WebDevelopment/HellwigBaumschule/Media-Queries.css" rel="stylesheet" type="text/css">
+    <link href="Media-Queries.css" rel="stylesheet" type="text/css">
     <!-- GOOGLE FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:700,400,400italic,500' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,800,400italic,700,300,300italic' rel='stylesheet' type='text/css'>
@@ -45,11 +45,10 @@
 <section>
     <div class="container">
         <div class="row">
-        <div class="container-nav navbar container-fluid navbar-default">
+        <div class="container-nav navbar container-fluid">
         		<div class="main-logo">
                 <a href="http://www.ole-sperlich.de"></a>
             </div>
-            <div class="container-nav">
             <ul class="nav navbar-nav navbar-right">
                <li><a class="active" href="http://www.ole-sperlich.de/">Home</a></li><li><a class="" href="http://www.baumschule-hellwig.de/ueber-hellwig/">Über Hellwig</a></li>
         			<li class="dropdown">
@@ -68,7 +67,6 @@
                </form>
       		</ul>
             <div class="clearfix"></div>
-       </div> <!-- container-nav -->
        </div> <!-- row (einrückung falsch )-->
     </div> <!-- row -->
     </div> <!-- container -->
