--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
     <section>
-        <div id="desktop-nav" class="container-nav navbar container-fluid main-logo">
+        <div id="desktop-nav" class="container-nav navbar main-logo">
             <label for="show-menu" class="show-menu main-logo">Show Menu</label>
             <input type="checkbox" id="show-menu" role="button">
             <!--<div class="main-logo">
