--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="author" content="Ole Sperlich">
     <!-- CORE CSS -->
     <link href="Bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <script src="https://use.fontawesome.com/4f0788cc3c.js"></script>
+
     <link href="jquery.fancybox.min.css" rel="stylesheet" type="text/css">
 
     <link href="Hellwig.css" rel="stylesheet" type="text/css">
@@ -60,7 +62,10 @@
 
     <section>
         <div id="desktop-nav" class="container-nav navbar main-logo">
-            <label for="show-menu" class="show-menu main-logo">Show Menu</label>
+            <label for="show-menu" class="show-menu main-logo" >
+                <i class="fa fa-bars" aria-hidden="true"></i>
+
+            </label>
             <input type="checkbox" id="show-menu" role="button">
             <!--<div class="main-logo">
                 <a href="http://www.ole-sperlich.de"></a>
@@ -74,16 +79,19 @@
                        data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Sortiment</a>
                     <ul class="dropdown-menu">
-                        <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/rhododendron/">Rhododendron</a>
+                        <li><a class=""
+                               href="http://www.baumschule-hellwig.de/sortiment/rhododendron/">Rhododendron</a>
                         </li>
-                        <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/laubgehoelze/">Laubgehölze</a>
+                        <li><a class=""
+                               href="http://www.baumschule-hellwig.de/sortiment/laubgehoelze/">Laubgehölze</a>
                         </li>
                         <li><a class=""
                                href="http://www.baumschule-hellwig.de/sortiment/nadelgehoelze/">Nadelgehölze</a>
                         </li>
                         <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/staemme/">Stämme</a>
                         </li>
-                        <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/formgehoelze/">Formgehölze</a>
+                        <li><a class=""
+                               href="http://www.baumschule-hellwig.de/sortiment/formgehoelze/">Formgehölze</a>
                         </li>
                         <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/acer/">Acer</a></li>
                         <li><a class="" href="http://www.baumschule-hellwig.de/sortiment/konzepte/">Konzepte</a>
@@ -105,9 +113,7 @@
             </ul>
             <div class="clearfix"></div>
         </div>
-    </section>
 
-    <section>
         <div class="container-fluid">
             <div class="row">
                 <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel"
