--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="http://www.baumschule-hellwig.de/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="SlideAnimations.js"></script>
 </head>
 
 
@@ -118,14 +121,6 @@
             <div class="row">
                 <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel"
                      data-interval="6000">
-
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="3" class=""></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="4" class=""></li>
-                    </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <picture>
@@ -289,10 +284,10 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6">
                                     <img src="http://www.baumschule-hellwig.de/site/assets/files/1/hellwig-unternehmen-teaser.-flach.jpg"
-                                         class="img-responsive" alt="">
+                                         class="img-responsive animation-element slide-left" alt="">
                                 </div>
                                 <div class="col-xs-12 col-sm-6">
-                                    <p>Wir sind ein mittelständisches Familienunternehmen in zweiter Generation und
+                                    <p class="animation-element slide-right">Wir sind ein mittelständisches Familienunternehmen in zweiter Generation und
                                         bieten auf einer Fläche von ca. 5 ha eine große Auswahl an japanischen Azaleen,
                                         Zwergrhododendren, Koniferen, Pieris, Stämmchen, Formgehölze und vieles mehr.
                                         Unsere Kunden sind unternehmergeführte Gartencenter, Landschaftsgärtner und
@@ -338,7 +333,7 @@
                             <div class="col-xs-12 col-sm-6">
                                 <a target="_blank" href="http://www.baumschule-hellwig.de/flipbook/">
                                     <img src="http://www.baumschule-hellwig.de/site/assets/files/1/hellwig-katalog-teaser.-flach.jpg"
-                                         class="img-responsive img-rounded" alt="">
+                                         class="img-responsive" alt="">
                                 </a>
                             </div>
                             <div class="clearfix"></div>
@@ -356,10 +351,10 @@
                             <div class="col-xs-12 col-sm-6">
                                 <a href="http://www.baumschule-hellwig.de/news/einladung-oldenburger-wintermesse/">
                                     <img src="http://www.baumschule-hellwig.de/site/assets/files/1061/lillybell_sun-night_pearl.-aktuell_thumb.jpg"
-                                         class="img-responsive img-rounded" alt="">
+                                         class="img-responsive animation-element slide-left" alt="">
                                 </a>
                             </div>
-                            <div class="col-xs-12 col-sm-6">
+                            <div class="col-xs-12 col-sm-6 animation-element slide-right">
                                 <a href="http://www.baumschule-hellwig.de/news/einladung-oldenburger-wintermesse/">
                                     <h3>Drei Neuheiten zur Oldenburger Vielfalt 2017</h3>
                                     <h4> &#149; 25. Juni 2017</h4>
