--- a/indexBackup.html
+++ b/indexBackup.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Ole Sperlich" >
     <!-- CORE CSS -->
     <link href="Bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/site/templates/styles/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/site/templates/styles/jquery.fancybox.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="jquery.fancybox.min.css" rel="stylesheet" type="text/css">
 
     <link href="Hellwig.css" rel="stylesheet" type="text/css">
-    <link href="http://www.baumschule-hellwig.de/home/ole/Dokumente/WebDevelopment/HellwigBaumschule/Media-Queries.css" rel="stylesheet" type="text/css">
+    <link href="Media-Queries.css" rel="stylesheet" type="text/css">
     <!-- GOOGLE FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:700,400,400italic,500' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,800,400italic,700,300,300italic' rel='stylesheet' type='text/css'>
@@ -41,12 +41,11 @@
 
 <body id="1" class="home">
 <div class="wrapper">
-    
 
 <section>
     <div class="container">
         <div class="row">
-        <div class="container-nav">
+        <div class="container-nav navbar container-fluid">
         		<div class="main-logo">
                 <a href="http://www.ole-sperlich.de"></a>
             </div>
@@ -68,9 +67,9 @@
                </form>
       		</ul>
             <div class="clearfix"></div>
-       </div> <!-- container-nav -->
-       </div> <!-- row (einrückung falsch ) -->
-    </div>
+       </div> <!-- row (einrückung falsch )-->
+    </div> <!-- row -->
+    </div> <!-- container -->
 </section>
 
     <section>
