--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dead Link</title>
+    <title>Ole Sperlich's page but it is a dead link</title>
+    <meta name="description" content="Hi I'm Ole Sperlich from Hildesheim, but this website is not worth your click ;)">
 </head>
 <body>
 <img src="1171357_1.jpg" alt="Dead Link" style="display:block; margin-left: auto; margin-right: auto; width: 50%">
